--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,9 +1,19 @@
+/* Add this to your App.css file */
+
 .App {
-  text-align: center;
-  background-image: url('https://res.cloudinary.com/dhw1mueq4/image/upload/v1702476383/photo_to_bes_sent_to_mule_gyu7pw.jpg');
-  background-repeat: no-repeat;
-  
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* This ensures the footer sticks to the bottom */
 }
+
+footer {
+  margin-top: auto; /* This pushes the footer to the bottom */
+  position: fixed;
+  bottom: -20px; /* Adjust this value to move the footer lower */
+  width: 100%;
+}
+
+
 
 /* Rest of your CSS code */
 
